split and join files